Closed Bug 867914 Opened 13 years ago Closed 13 years ago

Minor nit in extern declaration of asm function

Categories

(Core :: XPCOM, defect, P5)

Sun
NetBSD
defect

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: martin, Assigned: martin)

Details

Attachments

(1 file)

The attached patch fixes a compiler issue for me on NetBSD/sparc64 when using the same code as OpenBSD. The function is implemented in assembler and at the ABI level there is no change.
Attachment #744495 - Attachment is patch: true
Attachment #744495 - Attachment mime type: text/x-patch → text/plain
Attachment #744495 - Flags: review?(landry)
Priority: -- → P5
I'll be travelling in the coming days, but i'll make sure to look into this (and bug 867911 too) when possible - at least before end of month.
Comment on attachment 744495 [details] [diff] [review] Change extern declaration of shared stub function Review of attachment 744495 [details] [diff] [review]: ----------------------------------------------------------------- This doesnt seem to break things when backported to firefox 3.6 on sparc64 - just for the sake of completeness, what was the build error on NetBSD ? Will push it soon.
Attachment #744495 - Flags: review?(landry) → review+
Assignee: nobody → martin
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
For completeness: the error messages were (dozens of all alike): ../../../../../../dist/include/xptcstubsdef.inc: In member function 'virtual nsresult nsXPTCStubBase::Stub3()': ../../../../../../dist/include/xptcstubsdef.inc:1:1: error: cannot convert 'int' to 'nsresult' in return (this is with gcc 4.5.4)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: