Bug 867914: Declare SharedStub as returning nsresult in xptcstubs_sparc64_openbsd.cpp. r=landry

Fixes a build issue on NetBSD/sparc64, no apparent fallout on OpenBSD/sparc64